# Hearth-Home

./: .gitattributes  .gitignore  CLAUDE.md  README.md  player.c.patched  pubspec.yaml
.gitea/workflows/: build-pi-image.yml  build.yml
.github/workflows/: build-pi-image.yml  build-windows.yml  build.yml
buildroot-hearth/: Config.in  external.desc  external.mk
buildroot-hearth/configs/: hearth_pi5_defconfig
docs/plans/: 2026-04-09-gstreamer-video-player.md  2026-04-09-module-system-mealie.md  2026-04-12-alarm-clock-module.md  2026-04-12-mic-mute-toggle.md  2026-04-24-immich-photo-sources.md  2026-04-24-stream-to-obs.md
docs/specs/: 2026-04-09-gstreamer-video-player-design.md  2026-04-09-module-system-mealie-design.md  2026-04-12-alarm-clock-module-design.md  2026-04-12-ha-device-integration-design.md  2026-04-12-mic-mute-toggle-design.md  2026-04-12-voice-satellite-design.md  2026-04-21-screen-capture-design.md  2026-04-24-immich-photo-sources-design.md  2026-04-24-stream-to-obs-design.md
lib/: main.dart
lib/app/: app.dart  cast_overlay.dart  hub_shell.dart  idle_controller.dart  page_indicator.dart
lib/config/: hub_config.dart
lib/models/: frigate_event.dart  ha_entity.dart  immich_album.dart  immich_person.dart  music_state.dart  photo_memory.dart  sendspin_state.dart  weather_state.dart
linux/: CMakeLists.txt
native/sendspin_flac/: CMakeLists.txt  sendspin_flac.c  sendspin_flac.h
scripts/: apply_patch.py  migrate-audio-routing.sh  prepare-pi-build.sh  setup-pi.sh  ssdp-responder.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+194 files in other folders)
